@@ -1401,7 +1401,7 @@ namespace fastonosql
     };
 
     SsdbDriver::SsdbDriver(IConnectionSettingsBaseSPtr settings)
-        : IDriver(settings), impl_(new pimpl)
+        : IDriver(settings, SSDB), impl_(new pimpl)
     {
 
     }
@@ -1486,6 +1486,15 @@ namespace fastonosql
         cmdstring = patternResult;
 
         return common::ErrorValueSPtr();
+    }
+
+    common::ErrorValueSPtr SsdbDriver::commandChangeTTLImpl(CommandChangeTTL* command, std::string& cmdstring) const
+    {
+        UNUSED(command);
+        UNUSED(cmdstring);
+        char errorMsg[1024] = {0};
+        common::SNPrintf(errorMsg, sizeof(errorMsg), "Sorry, but now " PROJECT_NAME_TITLE " not supported change ttl command for %s.", common::convertToString(connectionType()));
+        return common::make_error_value(errorMsg, common::ErrorValue::E_ERROR);
     }
      // ============== commands =============//
 
