@@ -24,15 +24,25 @@ namespace fastonosql
         return common::convertFromString<QString>(common::Value::toString(key_.type()));
     }
 
-    int32_t KeyTableItem::msecTTL() const
+    int32_t KeyTableItem::TTL() const
     {
         NKey key = key_.key();
-        return key.ttl_msec_;
+        return key.ttl_sec_;
     }
 
     common::Value::Type KeyTableItem::type() const
     {
         return key_.type();
+    }
+
+    NDbValue KeyTableItem::dbv() const
+    {
+        return key_;
+    }
+
+    void KeyTableItem::setDbv(const NDbValue& val)
+    {
+        key_ = val;
     }
 
     KeysTableModel::KeysTableModel(QObject* parent)
@@ -76,7 +86,48 @@ namespace fastonosql
                 result = node->typeText();
             }
             else if (col == KeyTableItem::kTTL) {
-                result = node->msecTTL();
+                result = node->TTL();
+            }
+        }
+        return result;
+    }
+
+    bool KeysTableModel::setData(const QModelIndex& index, const QVariant& value, int role)
+    {
+        if (index.isValid() && role == Qt::EditRole) {
+            int column = index.column();
+            KeyTableItem *node = common::utils_qt::item<KeyTableItem*>(index);
+
+            if (!node){
+                return false;
+            }
+
+            if (column == KeyTableItem::kKey) {
+
+            }
+            else if (column == KeyTableItem::kTTL) {
+                bool isOk = false;
+                int32_t newValue = value.toInt(&isOk);
+                if(isOk && newValue != node->TTL()){
+                    NDbValue dbv = node->dbv();
+                    CommandKeySPtr com(new CommandChangeTTL(dbv, newValue));
+                    emit changedValue(com);
+                }
+            }
+        }
+
+        return false;
+    }
+
+    Qt::ItemFlags KeysTableModel::flags(const QModelIndex& index) const
+    {
+        Qt::ItemFlags result = 0;
+        if (index.isValid()) {
+            result = Qt::ItemIsSelectable | Qt::ItemIsEnabled;
+            int col = index.column();
+            KeyTableItem *node = common::utils_qt::item<KeyTableItem*>(index);
+            if(node && col == KeyTableItem::kTTL){
+                result |= Qt::ItemIsEditable;
             }
         }
         return result;
@@ -96,7 +147,7 @@ namespace fastonosql
                 return trType;
             }
             else if (section == KeyTableItem::kTTL) {
-                return trMsecTTL;
+                return trTTL;
             }
         }
 
@@ -106,6 +157,19 @@ namespace fastonosql
     int KeysTableModel::columnCount(const QModelIndex &parent) const
     {
         return KeyTableItem::kCountColumns;
+    }
+
+    void KeysTableModel::changeValue(const NDbValue& value)
+    {
+        const QString key = common::convertFromString<QString>(value.keyString());
+        for(int i = 0; i < data_.size(); ++i) {
+            KeyTableItem *it = dynamic_cast<KeyTableItem*>(data_[i]);
+            if(it->key() == key){
+                it->setDbv(value);
+                emit dataChanged(index(i, KeyTableItem::kTTL), index(i, KeyTableItem::kTTL));
+                break;
+            }
+        }
     }
 
     void KeysTableModel::clear()
